testcases/valid/field_none.shp
class A<p1> where p1: [A<p1>] {
    f: A<none>;
}
