testcases/parse_error/first_pool_param.shp
class Main<p1> where
    p1: [Main<none>]
{
    f1: i32;
}
